tm/tests/snapshots/tui_queue_screens__inbox_120.snap
---
source: tm/tests/tui_queue_screens.rs
expression: out
---
┌ Capture ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│> pset2 fri 6b ci4 max 2b/d_                                                                                          │
│  parsed  - [ ] 4 6b pset2 due:2026-09-11T23:59 max:2b/d  → week/2026-W37.md #Milestones                              │
│  Enter save · Tab change file · Esc cancel                                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Inbox (4)   i capture · t triage line · C Claude Code triages all · x drop
     1  pset2 fri 6b ci4 max 2b/d
     2  ask Kun about the dinner place
     3  renew the bike insurance before October
     4  read the Lean 4 metaprogramming book
