tm/tests/snapshots/tui_queue_screens__necessities_120.snap
---
source: tm/tests/tui_queue_screens.rs
expression: out
---
┌ Week W37 · walls & windows ───┐┌ Deadlines · waiting · necessary ────────────────────────────────────────────────────┐
│   Mon Tue Wed Thu Fri Sat Sun ││──── Dated ──────────────────────────────────────────────────────────────────────────│
│06 ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ███ ▒▒▒ ││  d1      CS 234 pset 2                       need 7.8b  cap 18b  u=0.43  p4  due Fri│
│07 ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ███ ▒▒▒ ││  x2      Midterm review                need 10.4b  cap 82.2b  u=0.13  p5  due Oct 20│
│08 ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ███ ▒▒▒ ││  d2      Workshop paper draft            need 13b  cap 133.8b  u=0.1  p4  due Nov 20│
│09                     ███     ││──── Waiting ────────────────────────────────────────────────────────────────────────│
│10                     ███     ││? a4      Ask Prof. Lee about the reading group                           p5  2d / 7d│
│11 ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ││──── Necessary today ────────────────────────────────────────────────────────────────│
│12 ███ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ││! a3      Pick up package           need 20m  p0  mandatory · window closes Mon 21:00│
│13 ███ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ││! lunch   lunch                     need 30m  p0  mandatory · window closes Mon 13:30│
│14                             ││! dinner  dinner                    need 30m  p0  mandatory · window closes Mon 19:30│
│15         ███                 ││! workout workout                    need 1b  p0  mandatory · window closes Mon 19:00│
│16 ▒▒▒     ███     ▒▒▒         ││! laundry laundry         need 30m  p0  overdue · mandatory · window closes Sun 21:00│
│17 ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ││                                                                                     │
│18 ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ││                                                                                     │
│19 ▒▒▒ ▒▒▒ ▒▒▒ ███ ▒▒▒ ▒▒▒ ▒▒▒ ││                                                                                     │
│20                             ││                                                                                     │
│21                             ││                                                                                     │
│22 ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ││                                                                                     │
│23 ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ▒▒▒ ││                                                                                     │
│                               ││                                                                                     │
│                               ││                                                                                     │
└───────────────────────────────┘└─────────────────────────────────────────────────────────────────────────────────────┘
 ↑/↓ move · E estimate · e edit · t event arrived · k skip instance · 1-5 screens
